# yt_preliminary_task_analysis

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  РАЗВЕРТЫВАНИЕ.md
config/: analyzer.yaml  providers.yaml
deploy/: Dockerfile  README.md  analyzer.service  docker-compose.yml  entrypoint.sh
docs/: wiki-analyzer-guide.md
scripts/: run_scheduled.cmd
src/analyzer/: __init__.py  budget.py  cli.py  config.py  daemon.py  journal.py  lock.py  models.py  onec.py  pipeline.py  progress.py  prompts.py  report.py  status.py  systems.py  tracker.py  users.py  verdict.py  webstatus.py  wiki.py
src/analyzer/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  openai_compat.py  responses_provider.py
templates/: bug-report.md  ft-report.md
tests/: test_authors.py  test_budget.py  test_cost.py  test_daemon.py  test_limits.py  test_lock.py  test_multisystem.py  test_parallel.py  test_progress.py  test_query.py  test_retry.py  test_status.py  test_summary.py  test_verdict.py  test_webstatus.py  test_write_guard.py
