[project]
name = "analyzer"
version = "0.1.0"
description = "ИИ-анализатор задач Yandex Tracker для 1С-разработки (мультипровайдерная LLM)"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
    "openai>=1.60",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "mcp>=1.2",
    "pydantic>=2.7",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
]

[project.scripts]
analyzer = "analyzer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/analyzer"]
